--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,16 @@
-
+.container text-center{
+    background-color:black;
+}
+h1, button{
+    background-color:black;
+    color:white;
+    border-radius:30px;
+}
+img{
+    width:220px;
+    height:220px;
+}
+p{
+    color:white;
+    
+}
